tooling/nargo_cli/tests/snapshots/execute__tests__1327_concrete_in_generic_force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "14704369559052067380",
  "abi": {
    "parameters": [
      {
        "name": "input",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "field"
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/62QQQrAMAgEE+iDNGqit36loeb/TyghOZSSntoBERGGZWMYxDnhdnf2uQkys5fkSHhAsqoCLDUrKorKmZTIlbVYtQKGTI5NjBoM3rzwDYz/uaC7tkfOsOhk9bsAvqGkpkgBAAA=",
  "debug_symbols": "XYxLCoAwDAXvkrUn8Coi0k9aAqEpsRWk9O5+cCFdzhveNPBoa9woBdlhXhqwOFNI0k2tT2CVmCluw3wYJWMZPww1uZ8tZ8bhn1Uc+qr4lF7X134B",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
