tooling/nargo_cli/tests/snapshots/execute__tests__1327_concrete_in_generic_force_brillig_true_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "4153785960036261946",
  "abi": {
    "parameters": [
      {
        "name": "input",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "field"
      },
      "visibility": "public"
    },
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VUSw6CMBQsUKPV4AIXeow2gLB0oQdpJD0HR9fG13SslQ3tJOSVvr7JzPAp2AcFXRYc9kK4vRtVuQ4qIZcsIjoXTcQGLlQF1RL6VULjIqIlFf8ou6tgv54T6m8FcebMx3Fm4Jdb4rnPnj/0YlGz748DZ3bUd+sjzFg8gNvN58zt/dz7zLmpE/uf1YFyaJgHni2DLHBdR3ol8Lr3mc/pfQ2j/3lUxL8BXwgOfTx/pvs96HeVr9BpBq1Mq43u9TR1T90E/CzI6QXqyk440QUAAA==",
  "debug_symbols": "fY9BCsMgEEXvMmsXWmsiuUoowSSTIIgGYwpFvHu1pCAtZDPMHx6feRFmHI910HZxO3R9BOMmFbSzOcVEYPTaGL0O9RloGUx8+H1TtsQ9KB+gY7wRBNDOZZUiNyzaIHSCJvIHS96erGzoNcoop99eem9r+JFyeiqv1WjwfHs57FRZhNeGP0KbdxPOh8eiVlnl2TNJbjzX5uo3",
  "file_map": {
    "50": {
      "source": "// ---\nfn new_concrete_c_over_d() -> C<D> {\n    let d_method_interface = get_d_method_interface();\n    C::new(d_method_interface)\n}\n// ---\n// Map<V>\nstruct B<T_C> {\n    new_concrete_t_c_constructor: fn() -> T_C,\n}\n\nimpl<T_C> B<T_C> {\n    fn new(new_concrete_t_c_constructor: fn() -> T_C) -> B<T_C> {\n        B { new_concrete_t_c_constructor }\n    }\n\n    fn get_t_c(self) -> T_C {\n        let new_concrete_t_c_constructor = self.new_concrete_t_c_constructor;\n        new_concrete_t_c_constructor()\n    }\n}\n// ---\n// PrivateSet<Note>\nstruct C<T_D> {\n    t_d_interface: MethodInterface<T_D>,\n}\n\nimpl<T_D> C<T_D> {\n    fn new(t_d_interface: MethodInterface<T_D>) -> Self {\n        C { t_d_interface }\n    }\n\n    fn call_method_of_t_d(self, t_d: T_D) -> Field {\n        let some_method_on_t_d = self.t_d_interface.some_method_on_t_d;\n        some_method_on_t_d(t_d)\n    }\n}\n// ---\nstruct MethodInterface<T_D> {\n    some_method_on_t_d: fn(T_D) -> Field,\n}\n// ---\n// Note\nstruct D {\n    d: Field,\n}\n\nfn d_method(input: D) -> Field {\n    input.d * input.d\n}\n\nfn get_d_method_interface() -> MethodInterface<D> {\n    MethodInterface { some_method_on_t_d: d_method }\n}\n// ---\nfn main(input: Field) -> pub Field {\n    let b: B<C<D>> = B::new(new_concrete_c_over_d);\n    let c: C<D> = b.get_t_c(); // PrivateMutable<Note>\n    let d: D = D { d: input }; // Note\n    let output = c.call_method_of_t_d(d);\n\n    output\n}\n// ---\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/1327_concrete_in_generic/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
