tooling/nargo_cli/tests/snapshots/execute__tests__2_div_force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "18229569517453064070",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "z",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "2920182694213909827": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      },
      "7233212735005103307": {
        "error_kind": "string",
        "string": "attempt to multiply with overflow"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/9VWvW6DMBC2sUniRh2ajh07dGgHSAhxtgwl70FAPAePXlDuxPUwdMCulJPQ2fHHfd/9QJDiblF3SVhr8EqMDTEX8MkySz3GSkLqlA+iMwqk89cwSBiYKcOkLHgDPiLnymPShvH6jG+T7GQc+XnUfzAQUweOH4eJn6whznc7xKe5IK9iOH6PIpiCYIoJzJVgrgzzDGspxlx4Rme4YGd03jH2prtexLDewdowrhDzR/X67t+rQz9ybSHXL3LGe6pm7sffV7CPCD6ewfNngcdfedKjJ/Rg/2OGfwOPPVmzey6wTxbajsQVDi6ql9ZUOXIOrXWupmuHHl7Td5YXvm9pL+dmZePgNSxXyrthvP1+z2LyZ43PU8zwyLGa0CyZBsR/EA1HhpeOvLSjDjHDf4I3YjwToWcUubZi6IFu/fOf7H3uelPtUAfXR6sm5xSfwv7JkYdeoLM5lWlzKJvyWNZ1VpW8Tr3R96tv/jzLU2tLW+VVc86q23/z763Nz/tb989VV02dHf7i/wHBC6uAhQwAAA==",
  "debug_symbols": "ldRLCoMwEAbgu8w6izyr8SqllKixBEKUqIUi3r1JaUFEKbMJTJiPTBj4F2htPT/uLnT9CNV1Ad83ZnJ9SNWyEqij89497ttroPlg+tM/DibkcpxMnKAqCwI2tFBpnnTnvIVK0fVGgFNkP0P286N+RtUXMEb3QvwTai8kWii0uKBFcShE+RNS7EWJFhorBEULhhYcLQRaSLQ43rmQ5+KCFgValGhxvHOuT4WkaMHQguPEmqqnic7U3n5DrZtDs8m46TXYXdwNsW9sO0ebg2+Tefl/UhKp0yAsj64EUSq9kd55Aw==",
  "file_map": {
    "50": {
      "source": "// Testing integer division: 7/3 = 2\nfn main(mut x: u32, y: u32, z: u32) {\n    let a = x % y;\n    assert(x / y == z);\n    assert(a == x - z * y);\n    assert((50 as u64) % (9 as u64) == 5);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/2_div/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
